--- a/css/main.css
+++ b/css/main.css
@@ -82,7 +82,7 @@ Filename      : main.css
     }
     
     .fixid {
-        background: #09152384;
+        background: #091421a1;
         box-shadow: 0 0 10px 5px rgba(48, 48, 47, 0.3);
     }
     
@@ -162,7 +162,7 @@ Filename      : main.css
         width: 100%;
         height: 100%;
         z-index: 999999999 !important;
-        background-color: #a4a3a0;
+        background-color: #1c1c1b;
         top: 0;
         left: 0;
         right: 0;
